change background and colors

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <footer>
       <a href="https://www.flaticon.com" title="cérebro ícones"
-        >Icons created for Freepik - Flaticon 💚</a
+        >Icons created for Freepik - Flaticon 💖</a
       >
     </footer>
 
