--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Memory Game | Login</title>
     <link rel="stylesheet" href="./css/style.css" />
-    <link rel="icon" type="image+svg/xml" href="/imgs/card.svg" >
+    <link rel="icon" type="image+svg/xml" href="./imgs/card.svg" >
   </head>
   <body>
     <form class="login-form">
