correção de bug

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </form>
 
     <footer>
-      <a href="https://www.flaticon.com" title="cérebro ícones"
+      <a href="https://www.flaticon.com" title="icons"
         >Icons created for Freepik - Flaticon 💖</a
       >
     </footer>
